<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="favorite_tags">Favorite Tags</string>
    <string name="menu_home">Home</string>
    <string name="backup_and_saved">Backups</string>
    <string name="export_data">Export Data</string>
    <string name="log_out">Log Out</string>

</resources>