<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/favorite_tag"
            android:icon="@android:drawable/btn_star"
            android:title="@string/favorite_tags" />
        <item
            android:id="@+id/backup"
            android:icon="@drawable/ic_cloud"
            android:title="@string/backup_and_saved" />
        <item
            android:id="@+id/export"
            android:icon="@android:drawable/stat_sys_download"
            android:title="@string/export_data" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>
</menu>